--- a/mainAdministrador/styles/style.css
+++ b/mainAdministrador/styles/style.css
@@ -31,13 +31,13 @@ a {
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  background-color: darkgray;
+  background-color: black;
 }
 
 aside {
   padding: 2rem;
   padding-right: 0;
-  color: white;
+  color: darkblue;
   position: sticky;
   top: 0;
   height: 100vh;
@@ -60,7 +60,7 @@ aside {
 .boton-menu {
   background-color: transparent;
   border: 0;
-  color: white;
+  color:white ;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -114,4 +114,90 @@ main {
   margin-left: 0;
   border-radius: 2rem;
   padding: 3rem;
+}
+
+.titulo-principal{
+  color: black;
+  margin-bottom: 2rem;
+}
+
+.header-mobile{
+  display: none;
+}
+
+.close-menu{
+  display: none;
+}
+
+.disabled{
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .wrapper{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+
+  aside{
+    position: fixed;
+    z-index: 9;
+    background-color: black;
+    left: 0;
+    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .75);
+    transform: translateX(-100%);
+    opacity: 0;
+    visibility: hidden;
+    transition: .2s;
+  };
+
+  .aside-visible{
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .boton-menu.active::before,
+  .boton-menu.active::after{
+    display: none;
+  }
+
+  main{
+    margin: 1rem;
+    margin-top: 0;
+    padding: 2rem;
+  }
+
+  .contenedor-productos{
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .header-mobile{
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header-mobile .logo{
+    color: gray;
+  }
+
+  .open-menu, .close-menu{
+    background-color: transparent;
+    color: gray;
+    border: 0;
+    font-size: 2rem;
+    cursor: pointer;
+  }
+
+  .close-menu{
+    display:block;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+  }
+
+  
 }
